--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 body{
     margin: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+#credit{
+    position: absolute;
+    left: 0;
+    bottom: 0; 
+    font-size: 10px;
 }
 #navbar{
     margin: 0;
@@ -56,6 +64,7 @@ a{
     justify-content: space-between;
     display: flex;
     margin-bottom: 2%;
+    
 }
 
 @media screen and (max-width:700px) {
@@ -75,6 +84,7 @@ a{
     height: fit-content;
     background-color: #4A485A;
     color: white;
+    
 }
 @media screen and (max-width:700px) {
     .project{
@@ -114,7 +124,7 @@ a{
     display: flex;
     flex-direction: column;
     width: fit-content ;
-    height: 80vh;
+    height: fit-content;
     background-color: #4A485A;
     margin-right: 1%;
 }
@@ -134,7 +144,7 @@ a{
     flex-direction: column;
 }
 #resume-profile{
-    height: 20vh;
+    height: fit-content;
     width: 90%;
     background-color: #4A485A;
 }
@@ -168,4 +178,17 @@ a{
     #skills-main{
         display: inline;
     }
+}
+#project-list{
+    margin-top: 1%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.list-project{
+    text-align:center;
+    color: #FFFFFF;
+    background-color: #4A485A;
+    height: fit-content;
+    width:85vw ;
 }
